# MicroHFT

./: CMakeLists.txt  README.md  generate_build.sh  logger.hpp  main.cpp  market_data.hpp  order_manager.hpp  stategy.hpp  utils.hpp
